--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,3 +4,65 @@
     box-sizing: border-box;
     font-family: "Open Sans";
 }
+
+/*Boot CSS**/
+.center{
+    max-width: 1280px;
+    padding: 0 2%;
+    margin: 0 auto;
+}
+
+.w33{
+    width: 33.3%;
+}
+
+.w50{
+    width: 50%;   
+}
+
+.left{
+    float: left;
+}
+
+.right{
+    float: right;
+}
+
+.clear{
+    clear: both;
+}
+/**Estilização do site**/
+header{
+    padding: 20px 0;
+    background: #177BA5;
+}
+
+header .logo{
+    font-size: 23px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: white;
+}
+
+.mobile{
+    display: none;
+}
+
+nav.desktop ul{
+    position: relative;
+    top: 5px;
+    list-style-type: none;
+}
+
+nav.desktop li{
+    font-weight: 300;
+    font-size: 15px;
+    padding: 0 20px;
+    text-transform: uppercase;
+    display: inline-block;
+}
+
+nav.desktop a{
+    color: white;
+    text-decoration: none;
+}
