--- a/estilo/style.css
+++ b/estilo/style.css
@@ -66,3 +66,60 @@ nav.desktop a{
     color: white;
     text-decoration: none;
 }
+
+section.banner-principal{
+    width: 100%;
+    height: 600px;
+    background-image: url(../images/bg-form.jpg);
+    background-size: cover;
+    position: relative;
+}
+
+.overlay{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+section.banner-principal form{
+    width: 98%;
+    max-width: 500px;
+    z-index: 2;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform:translate(-50%, -50%);
+}
+
+section.banner-principal h2{
+    color: white;
+    font-weight:300;
+    font-size: 30px;
+    text-align: center;
+}
+
+section.banner-principal form input[type=email]{
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    background: white;
+    color: #333;
+    font-size: 22px;
+    padding-left: 10px;
+}
+
+section.banner-principal form input[type=submit]{
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    background:#66DFEF;
+    cursor: pointer;
+    color: black;
+    font-size: 22px;
+    border: 0;
+}
