--- a/estilo/style.css
+++ b/estilo/style.css
@@ -6,6 +6,11 @@
 }
 
 /*Boot CSS**/
+img{
+    width: 100%;
+    max-width: 400px;
+}
+
 .center{
     max-width: 1280px;
     padding: 0 2%;
@@ -17,7 +22,8 @@
 }
 
 .w50{
-    width: 50%;   
+    padding: 0 10px;
+    width: 50%;
 }
 
 .left{
@@ -86,7 +92,7 @@ section.banner-principal{
 }
 
 section.banner-principal form{
-    width: 98%;
+    width: 93%;
     max-width: 500px;
     z-index: 2;
     position: absolute;
@@ -122,4 +128,76 @@ section.banner-principal form input[type=submit]{
     color: black;
     font-size: 22px;
     border: 0;
+}
+
+section.desc-autor {
+    padding: 30px 0;
+}
+
+section.desc-autor h2{
+    font-size: 28px;
+    font-weight: 400;
+    color: #222222
+}
+
+section.desc-autor p{
+    font-size: 16px;
+    color: #5a5a5a;
+    margin-top: 10px;
+}
+
+@media screen and (max-width: 700px){
+    nav.desktop{
+        display: none;
+    }
+
+    nav.mobile{
+        display: block;
+    }
+
+    .menu-mobile{
+        font-size: 24px;
+        cursor: pointer;
+        color: white;
+    }
+
+    nav.mobile ul{        
+        width: 100%;
+        top: 55px;
+        z-index: 3;
+        position: absolute;
+        left: 0;
+        display: none;
+        text-align: center;
+    }
+
+    nav.mobile li{
+        font-weight: 300;
+        width: 100%;
+        font-size: 17px;
+        display: block;
+        background: white;
+        border-bottom: 1px solid #ccc;
+        padding: 6px 0;
+    }
+
+    nav.mobile li a{
+        display: block;
+        color: #444;
+        text-decoration: none;
+    }
+
+}
+
+@media screen and (max-width: 768px){
+    img{
+        float: none !important;
+        display: block;
+        margin: 0 auto;
+    }
+
+    .w50{
+        padding: 20px;
+        width: 100%;
+    }
 }
