--- a/estilo/style.css
+++ b/estilo/style.css
@@ -19,6 +19,7 @@ img{
 
 .w33{
     width: 33.3%;
+    padding: 0 10px;
 }
 
 .w50{
@@ -131,7 +132,7 @@ section.banner-principal form input[type=submit]{
 }
 
 section.desc-autor {
-    padding: 30px 0;
+    padding: 40px 0;
 }
 
 section.desc-autor h2{
@@ -143,6 +144,40 @@ section.desc-autor h2{
 section.desc-autor p{
     font-size: 16px;
     color: #5a5a5a;
+    font-weight: 300;
+    margin-top: 10px;
+}
+
+section.especialidades {
+    padding: 40px 0;
+    background: #E2E2E2;
+}
+
+section.especialidades h2.title{
+    font-size:30px;
+    color: black;
+    text-align: center;
+}
+
+.box-especialidades{
+    margin:40px 0;
+    padding: 0 30px;
+    text-align: center;
+}
+
+.box-especialidades h3{
+    color: #0B9BB2;
+    font-size: 50px;
+}
+
+.box-especialidades h4{
+    color: black;
+    font-size: 25px;    
+}
+
+.box-especialidades p{
+    color: #333333;
+    font-size: 14px;
     margin-top: 10px;
 }
 
@@ -200,4 +235,15 @@ section.desc-autor p{
         padding: 20px;
         width: 100%;
     }
+
+    .w33{
+        width: 100%;
+        padding: 20px;
+    }
+
+    .box-especialidades{
+        padding: 30px 20px;
+        margin: 0;
+    }
+
 }
