--- a/estilo/style.css
+++ b/estilo/style.css
@@ -48,7 +48,11 @@ header .logo{
     font-size: 23px;
     font-weight: 500;
     text-transform: uppercase;
-    color: white;
+}
+
+.logo a{
+    text-decoration: none;
+    color:white;
 }
 
 .mobile{
