--- a/estilo/style.css
+++ b/estilo/style.css
@@ -295,6 +295,48 @@ section.erro-404 a{
     top: 50%;
 }
 
+#map{
+    width: 100%;
+    height: 400px;
+}
+
+.contato-container{
+    padding: 40px 0;
+    text-align: center;
+}
+
+.contato-container input[type=text]{
+    margin: 8px 0;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #ccc;
+    padding-left: 8px;
+    font-size: 16px;
+    max-width: 700px;
+    color: #444;
+}
+
+.contato-container textarea{
+    padding: 8px;
+    margin: 8px 0;
+    width: 100%;
+    height: 120px;
+    border: 1px solid #ccc;
+    padding-left: 8px;
+    font-size: 16px;
+    max-width: 700px;
+    resize: vertical;
+    color: #444;
+}
+
+.contato-container input[type=submit]{
+    background:#66DFEF;
+    width: 700px;
+    height: 40px;
+    color: white;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 768px){
     img{
         float: none !important;
